# APIFairy

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
apifairy/: __init__.py  core.py  decorators.py
docs/: apifairy_class.rst  conf.py  decorators.rst  documentation_comments.rst  guide.rst  index.rst  intro.rst
examples/: README.md  app.py  app_with_class_views.py
src/apifairy/: __init__.py  core.py  decorators.py  fields.py
src/apifairy/templates/apifairy/: elements.html  rapidoc.html  redoc.html  swagger_ui.html
tests/: test_apifairy.py
