[metadata]
name = apifairy
version = 0.9.1
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = A minimalistic API framework built on top of Flask, Marshmallow and friends.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/apifairy
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/apifairy/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    flask >= 1.1.0
    flask-marshmallow
    webargs >= 6
    flask-httpauth >= 4
    apispec >= 4

[options.packages.find]
where = src

[options.package_data]
apifairy = templates/apifairy/*.html
